# pyimp.nvim

./: Cargo.toml  DESIGN.md  README.md
.github/workflows/: release.yml
lua/pyimp/: init.lua
plugin/: pyimp.lua
scripts/: install.sh
src/: lib.rs  main.rs
tests/: fixture_project.rs  lsp.rs
tests/fixtures/rename_project/: pyproject.toml
tests/fixtures/rename_project/src/acme/: __init__.py  main.py  old.py
tests/fixtures/rename_project/src/acme/importlib/: __init__.py  consumer.py  old.py
tests/fixtures/rename_project/src/acme/namespace/: consumer.py  old.py
tests/fixtures/rename_project/src/acme/namespace/subpkg/: mod.py
tests/fixtures/rename_project/src/acme/other/: __init__.py  consumer.py  old.py
tests/fixtures/rename_project/src/acme/pkg/: __init__.py  consumer.py  old.py
tests/fixtures/rename_project/src/acme/pkg/deep/: __init__.py  consumer.py
tests/fixtures/rename_project/src/acme/tools/: import_all.py
