[package]
name = "pyimp-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.94"
ruff_python_ast = "=0.0.3"
ruff_python_parser = "=0.0.3"
ruff_text_size = "=0.0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[dev-dependencies]
tempfile = "3"
